--- a/styles/_aside.scss
+++ b/styles/_aside.scss
@@ -1,6 +1,7 @@
 aside {
   height: 100vh;
   width: 40vw;
+  min-width: 35vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
