--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,10 +3,15 @@
   src: url(../fonts/Norse-Bold.otf);
 }
 
+// Variables
 $logo-font: norse-bold;
+$main-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 $logo-div-color: rgba(17, 16, 16, 0.5);
 $button-color: #596D48;
 $form-border-color: #E5E7EB;
+$main-bg-color: #F9FAFB;
+$form-bg-color: #FFFFFF;
+//////////
 
 @import "./_aside.scss";
 
@@ -21,5 +26,23 @@ $form-border-color: #E5E7EB;
   display: flex;
   width: 100%;
 }
+.upper, 
+.middle,
+.lower {
+  padding-left: 2rem;
+}
+.upper {
+  height: 17rem;
+  background-color: $main-bg-color;
+  font-family: $main-font;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 6.5rem;
+  padding-right: 20%;
 
+  >p {
+    margin-bottom: 1.5rem;
+  }
+
+}
 
