Style input fields and labels

--- a/styles/style.css
+++ b/styles/style.css
@@ -93,4 +93,40 @@ footer p {
 .upper > p {
   margin-bottom: 1.5rem;
 }
+
+.middle {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-bottom: 3rem;
+}
+
+.middle h1 {
+  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.middle .form-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem;
+  font-size: 10px;
+  font-weight: 500;
+}
+
+.middle .form-row .input-div {
+  margin-right: 10%;
+}
+
+.middle .form-row .input-div label {
+  display: block;
+}
+
+.middle .form-row .input-div input {
+  padding: 3px;
+  padding-left: 10px;
+  border: 1px solid #E5E7EB;
+  border-radius: 4px;
+}
 /*# sourceMappingURL=style.css.map */
