--- a/styles/style.css
+++ b/styles/style.css
@@ -96,12 +96,15 @@ footer p {
 
 .middle {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-bottom: 3rem;
+  -webkit-box-shadow: 0 5px 4px rgba(78, 75, 75, 0.4);
+          box-shadow: 0 5px 4px rgba(78, 75, 75, 0.4);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  position: relative;
 }
 
 .middle h1 {
   margin-bottom: 1.5rem;
-  margin-top: 1rem;
   font-size: 20px;
   font-weight: 500;
 }
@@ -137,5 +140,11 @@ footer p {
 
 .middle .form-row .input-div input:invalid:focus {
   border-color: hotpink;
+}
+
+.lower {
+  height: 10rem;
+  background-color: #F9FAFB;
+  padding-top: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
