--- a/styles/style.css
+++ b/styles/style.css
@@ -147,4 +147,14 @@ footer p {
   background-color: #F9FAFB;
   padding-top: 2rem;
 }
+
+.lower button {
+  padding: 0.8rem 2.4rem;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  border-radius: 8px;
+  color: #FFFFFF;
+  background-color: #596D48;
+}
 /*# sourceMappingURL=style.css.map */
