--- a/styles/style.scss
+++ b/styles/style.scss
@@ -101,5 +101,13 @@ $form-bg-color: #FFFFFF;
   background-color: $main-bg-color;
   padding-top: 2rem;
 
-  
+  button {
+    padding: 0.8rem 2.4rem;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    color: $form-bg-color;
+    background-color: $button-color;
+  }
 }
