--- a/styles/style.css
+++ b/styles/style.css
@@ -156,5 +156,16 @@ footer p {
   border-radius: 8px;
   color: #FFFFFF;
   background-color: #596D48;
+  margin-bottom: 2rem;
+}
+
+.lower p {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 500;
+}
+
+.lower a {
+  color: #596D48;
+  text-decoration: none;
 }
 /*# sourceMappingURL=style.css.map */
