--- a/styles/style.css
+++ b/styles/style.css
@@ -156,6 +156,10 @@ footer p {
   margin-bottom: 2rem;
 }
 
+.lower button:hover {
+  cursor: pointer;
+}
+
 .lower p {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
